# ros2_rookie_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client_exe  add_two_ints_client_no_oop_exe  add_two_ints_server_exe  cpp_node_c  cpp_node_c2  hardware_exe  number_counter  number_publisher  robot_news_station_exe  smartphone_exe  timer_node_1
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh
install/my_py_pkg/lib/my_py_pkg/: add_two_ints_oop_client  battery_client_exe  hardware_exe  mobilephone  my_add_service  py_node_p
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/ament_index/resource_index/parent_prefix_path/: my_robot_bringup
install/my_robot_bringup/share/my_robot_bringup/: package.sh
install/my_robot_bringup/share/my_robot_bringup/launch/: number_app.launch.py  robot_news.launch.py
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/msg/detail/: hardware_status__struct.h  hardware_status__struct.hpp  hardware_status__type_support.c  hardware_status__type_support.cpp  led_state_array__builder.hpp  led_state_array__functions.c  led_state_array__struct.h  led_state_array__type_support.c  led_state_array__type_support.cpp  led_states__builder.hpp  led_states__functions.c  led_states__traits.hpp
install/my_robot_interfaces/share/ament_index/resource_index/parent_prefix_path/: my_robot_interfaces
install/my_robot_interfaces/share/my_robot_interfaces/: package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/msg/: HardwareStatus.idl  HardwareStatus.msg  LedStateArray.msg
install/turtlesim_catch_them_all/share/turtlesim_catch_them_all/: package.sh
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  cpp_node.cpp  hardware_msg_test.cpp  my_first_node.cpp  my_timer.cpp  number_counter_code.cpp  number_publisher_code.cpp  robot_news_station_code.cpp  smartphone_code.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_oop.py  node1.txt  number_publisher_code.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: turtlesim_catch_them_all.launch.py
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/msg/: Turtle.msg  TurtleArray.msg
src/turtlesim_catch_them_all/: package.xml  setup.py
src/turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py  turtle_spawner.py
(+6 files in other folders)
